Fix duplicate ownership wiring and the puml diagram
A record reached from more than one parent had its fields walked once per
path, so every owner it holds through an array was added again on each
walk. `Car.owners` became `[Garage, Garage]` when two roots embed the same
composite. The list feeds the 1-N relation wiring, where `owners.size() > 1`
picks the polymorphic foreign key shape and `owners[0]` names the plain one,
so the duplication was not confined to the diagram. Registering the entity
before walking also terminates a record that holds a collection of itself,
which used to recurse until the stack ran out.

Split the role ladder from the templates that render it. `AvroEntity.getRoles`
returns what a record is, most specific first, and a generator narrows that to
the roles it has a template for. `Generator.resolveRole` becomes that filter
and keeps its previous results. The puml generator has no per record template
and so could not ask, and labelled every non root record `<<record>>`; it now
takes `entity.role` and distinguishes root, owner, dependent and child.

The diagram had three further defects. Field types were rendered through the
`javaType` filter, which silently passes anything that is not a `Type` through
untouched, so an Avro schema printed as its raw JSON. Members whose line ended
in a literal rather than an expression kept a newline Pebble would otherwise
trim, and every array field was followed by an empty row; the type is now
built into a variable so one line emits each member. Enums carry a stereotype
and so resolve against `class<<enum>>`, which left the bare `enum` skinparam
unused and the enums unstyled.

The svg postCall passed a quoted header and a redirect to a command that is
tokenized on whitespace and run without a shell, so curl received a malformed
header and three stray arguments it treated as URLs, and exited non-zero while
still writing the diagram. postCall now reports a non-zero exit and drains
stderr, which it previously lef